--- a/arch/arm/boot/dts/imx6qdl-wisehmi.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-wisehmi.dtsi
@@ -265,6 +265,7 @@
 	pinctrl-0 = <&pinctrl_enet>;
 	phy-mode = "rmii";
 	phy-reset-gpios = <&gpio1 4 0>;
+	local-mac-address = [00 04 9F 01 1B B9];
 };
 
 &gpmi {
